# ds570-music-data-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  vive_latino_audience_gender.csv  vive_latino_audience_map.csv  vive_latino_lineup.csv  vive_latino_monthly_streaming_map.csv
Assets/Countries/Argentina/: argentina_cities.csv  argentina_events.csv  argentina_festivals.csv  argentina_music_charts.csv  argentina_overview.csv  argentina_radio_spins.csv  argentina_subgenres.csv  argentina_top_artists.csv
Assets/Countries/Australia/: australia_cities.csv  australia_events.csv  australia_festivals.csv  australia_music_charts.csv  australia_overview.csv  australia_radio_spins.csv  australia_subgenres.csv  australia_top_artists.csv
Assets/Countries/Austria/: austria_event_overview.csv  austria_festival_overview.csv  austria_music_charts.csv  austria_overview.csv  austria_subgenres_live.csv  austria_top_artists_performing.csv  austria_top_artists_radio.csv
Assets/Countries/Belgium/: belgium_cities.csv  belgium_event_overview.csv  belgium_festival_overview.csv  belgium_music_charts.csv  belgium_overview.csv  (+3 more)
Assets/Playlists/: All Genres-Playlist-Chart-Current_Total.csv  Electronic-Playlist-Chart-Current_Total.csv  Hip Hop-Playlist-Chart-Current_Total.csv  Metal-Playlist-Chart-Current_Total.csv  Pop-Playlist-Chart-Current_Total.csv  Rock-Playlist-Chart-Current_Total.csv
app/: dashboard.py
music/: config.py  process.py  train.py
notebooks/: 2026-05-10-dcb-Genre-EDA.ipynb
src/: process.py  train.py
tests/: test_process.py
(+582 files in other folders)
